--- a/IsoTetris.uproject
+++ b/IsoTetris.uproject
@@ -1,12 +1,3 @@
-{
-	"FileVersion": 3,
-	"EngineAssociation": "4.24",
-	"Category": "",
-	"Description": "",
-	"Plugins": [
-		{
-			"Name": "HDRIBackdrop",
-			"Enabled": true
-		}
-	]
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:f2e3f022c5a8e5319952fcf67d6e49e7921d30c4959fd3745e9e722fd7042ef2
+size 160
