--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -248,6 +248,8 @@ LastLevel=/Game/TetrisBP/Maps/TetrisLevel1_01
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/TetrisBP/Blueprints/Player/Spaceship.Spaceship
+OpenAssetsAtExit=/Game/Yosi/SP_11.SP_11
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -998,28 +1000,85 @@ LightmassImportanceVolume.Activation=True
 LightmassImportanceVolume.Cooking=True
 LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Activation=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.LightShafts=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Activation=True
+PointLight.Cooking=True
+PointLight.Actor=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.LightShafts=True
+RectLight.DistanceFieldShadows=True
+RectLight.RayTracing=True
+RectLight.Tags=True
+RectLight.Activation=True
+RectLight.Cooking=True
+RectLight.Actor=True
+Actor.Collision=True
+SpaceshipController_C.PlayerController=True
+SpaceshipController_C.Tick=True
+SpaceshipController_C.Cheat Manager=True
+SpaceshipController_C.MouseInterface=True
+SpaceshipController_C.Game=True
+SpaceshipController_C.Controller=True
+SpaceshipController_C.Replication=True
+SpaceshipController_C.Input=True
+SpaceshipController_C.Actor=True
+Spaceship_C.Default=True
+Spaceship_C.Tick=True
+Spaceship_C.Pawn=True
+Spaceship_C.Camera=True
+Spaceship_C.Rendering=True
+Spaceship_C.Replication=True
+Spaceship_C.Collision=True
+Spaceship_C.Input=True
+Spaceship_C.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TetrisBP/Maps/TetrisLevel1_01
-MRUItem1=/Game/TetrisBP/Maps/FlyingExampleMap
-MRUItem2=/Game/FlyingBP/Blueprints/FlyingPawn
-MRUItem3=/Game/LevelSeq
-MRUItem4=/Game/Assets/Spaceships/Spaceships_1_Cube_010
-MRUItem5=/Game/Materials/Textures/AlbedoB_W01
-MRUItem6=/Game/Materials/Outline_MAT_Inst
-MRUItem7=/Game/UI
-MRUItem8=/Game/Cube2_Blueprint
-MRUItem9=/Game/ShapeTracing
-MRUItem10=/Game/FlyingBP/Maps/FlyingExampleMap
-MRUItem11=/Game/FlyingBP/Maps/MainMapRomy1
-MRUItem12=/Game/tetroid
-MRUItem13=/Game/FlyingBP/Maps/Tom
-MRUItem14=/Game/Maps/RomyLevel1
-MRUItem15=/Game/Maps/Tom_Backup
-MRUItem16=/Game/FlyingBP/Blueprints/FlyingPawnRomy
-MRUItem17=/Game/Platform
-MRUItem18=/Game/Cube
-MRUItem19=/Game/Materials/projection_Mat
+MRUItem0=/Game/Yosi/SP_11
+MRUItem1=/Game/Assets/Spaceships/UFO
+MRUItem2=/Game/TetrisBP/Blueprints/Player/Spaceship
+MRUItem3=/Game/TetrisBP/Blueprints/Player/SpaceshipController
+MRUItem4=/Game/TetrisBP/Blueprints/Player/PlayerController
+MRUItem5=/Game/TetrisBP/Blueprints/Player/FlyingPawn
+MRUItem6=/Game/Yosi/dreamstime_xxl_113421855__1_
+MRUItem7=/Game/Yosi/SkySphere
+MRUItem8=/Game/TetrisBP/Maps/TetrisLevel1_01
+MRUItem9=/Game/TetrisBP/Maps/FlyingExampleMap
+MRUItem10=/Game/FlyingBP/Blueprints/FlyingPawn
+MRUItem11=/Game/LevelSeq
+MRUItem12=/Game/Assets/Spaceships/Spaceships_1_Cube_010
+MRUItem13=/Game/Materials/Textures/AlbedoB_W01
+MRUItem14=/Game/Materials/Outline_MAT_Inst
+MRUItem15=/Game/UI
+MRUItem16=/Game/Cube2_Blueprint
+MRUItem17=/Game/ShapeTracing
+MRUItem18=/Game/FlyingBP/Maps/FlyingExampleMap
+MRUItem19=/Game/FlyingBP/Maps/MainMapRomy1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[44]\" "
@@ -1027,7 +1086,7 @@ Object=
 FloatingPawnMovement="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
-MovementComponent="\"Object.RotatingComponent.RotationRate\" \"Object.Velocity.Velocity\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 ActorComponent=
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Cube_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1847,6 +1906,11 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Yosi/Test_Spacesheep_mesh01.Test_Spacesheep_mesh01;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Yosi/SkySphere.SkySphere;
 RecentlyPlaced=/Game/Yosi/Space_Skybox.Space_Skybox;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
@@ -1862,7 +1926,6 @@ RecentlyPlaced=/Game/Cube2_Blueprint.Cube2_Blueprint;
 RecentlyPlaced=/Game/SnapSpot.SnapSpot;
 RecentlyPlaced=/Game/Platform.Platform;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 
 [DetailCategoriesAdvanced]
 FlyingPawn_C.Collision=True
@@ -1897,9 +1960,15 @@ Cube2_Blueprint_C.Collision=True
 /Game/Materials/Textures/AlbedoB_W01.AlbedoB_W01=1
 /Game/Assets/Spaceships/Spaceships_1_Cube_010.Spaceships_1_Cube_010=1
 /Game/UI.UI=1
+/Game/Yosi/SkySphere.SkySphere=1
+/Game/TetrisBP/Blueprints/Player/FlyingPawn.FlyingPawn=1
+/Game/Yosi/dreamstime_xxl_113421855__1_.dreamstime_xxl_113421855__1_=1
+/Game/TetrisBP/Blueprints/Player/PlayerController.PlayerController=1
+/Game/TetrisBP/Blueprints/Player/SpaceshipController.SpaceshipController=1
+/Game/Assets/Spaceships/UFO.UFO=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
