--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -248,8 +248,8 @@ LastLevel=/Game/TetrisBP/Maps/TetrisLevel1_01
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/TetrisBP/Blueprints/Player/Spaceship.Spaceship
 OpenAssetsAtExit=/Game/Yosi/SP_11.SP_11
+OpenAssetsAtExit=/Game/TetrisBP/Blueprints/Player/Spaceship.Spaceship
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1059,10 +1059,10 @@ Spaceship_C.Input=True
 Spaceship_C.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Yosi/SP_11
-MRUItem1=/Game/Assets/Spaceships/UFO
-MRUItem2=/Game/TetrisBP/Blueprints/Player/Spaceship
-MRUItem3=/Game/TetrisBP/Blueprints/Player/SpaceshipController
+MRUItem0=/Game/TetrisBP/Blueprints/Player/Spaceship
+MRUItem1=/Game/TetrisBP/Blueprints/Player/SpaceshipController
+MRUItem2=/Game/Yosi/SP_11
+MRUItem3=/Game/Assets/Spaceships/UFO
 MRUItem4=/Game/TetrisBP/Blueprints/Player/PlayerController
 MRUItem5=/Game/TetrisBP/Blueprints/Player/FlyingPawn
 MRUItem6=/Game/Yosi/dreamstime_xxl_113421855__1_
@@ -1082,19 +1082,19 @@ MRUItem19=/Game/FlyingBP/Maps/MainMapRomy1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[44]\" "
-Object=
+Object="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 FloatingPawnMovement="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Cube_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 RotatingMovementComponent="\"Object.RotatingComponent.RotationRate\" \"Object.Velocity.Velocity\" "
@@ -1906,7 +1906,11 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Yosi/Test_Spacesheep_mesh01.Test_Spacesheep_mesh01;
+RecentlyPlaced=/Game/Yosi/material_1_red.material_1_red;
+RecentlyPlaced=/Game/Yosi/d17b.d17b;
+RecentlyPlaced=/Game/Yosi/material_1_cushion.material_1_cushion;
+RecentlyPlaced=/Game/Yosi/material_1_couplers.material_1_couplers;
+RecentlyPlaced=/Game/Yosi/SP_11.SP_11;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
@@ -1922,10 +1926,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/Blocks_L.Blocks_L;
 RecentlyPlaced=/Game/Geometry/Meshes/Blocks_line.Blocks_line;
 RecentlyPlaced=/Game/Geometry/Meshes/Blocks_s.Blocks_s;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Game/Cube2_Blueprint.Cube2_Blueprint;
-RecentlyPlaced=/Game/SnapSpot.SnapSpot;
-RecentlyPlaced=/Game/Platform.Platform;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailCategoriesAdvanced]
 FlyingPawn_C.Collision=True
@@ -1964,8 +1964,9 @@ Cube2_Blueprint_C.Collision=True
 /Game/TetrisBP/Blueprints/Player/FlyingPawn.FlyingPawn=1
 /Game/Yosi/dreamstime_xxl_113421855__1_.dreamstime_xxl_113421855__1_=1
 /Game/TetrisBP/Blueprints/Player/PlayerController.PlayerController=1
-/Game/TetrisBP/Blueprints/Player/SpaceshipController.SpaceshipController=1
+/Game/TetrisBP/Blueprints/Player/SpaceshipController.SpaceshipController=0
 /Game/Assets/Spaceships/UFO.UFO=0
+/Game/TetrisBP/Blueprints/Player/Spaceship.Spaceship=0
 
 [MessageLog]
 LastLogListing=FBXImport
