--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,7 +30,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FlyingBP/Maps/FlyingExampleMap.FlyingExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/FlyingBP/Blueprints/FlyingGameMode.FlyingGameMode_C
+GlobalDefaultGameMode=/Game/TetrisBP/Blueprints/GameLogic/TetrisGameModeRomy.TetrisGameModeRomy_C
 GlobalDefaultServerGameMode=None
 
 
