--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,6 +20,7 @@ MaterialQualityLevel=1
 PreviewFeatureLevel=3
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -112,14 +113,15 @@ CurrentScalingGridSize=5
 
 [MRU]
 MRUItem0=/Game/TetrisBP/Maps/TetrisLevel1_01
-MRUItem1=/Game/Yosi/Sky
-MRUItem2=/Game/TetrisBP/Maps/Romy
-MRUItem3=/Game/TetrisBP/Maps/FlyingExampleMap
-MRUItem4=/Game/FlyingBP/Maps/FlyingExampleMap
-MRUItem5=/Game/FlyingBP/Maps/MainMapRomy1
-MRUItem6=/Game/FlyingBP/Maps/Tom
-MRUItem7=/Game/Maps/RomyLevel1
-MRUItem8=/Game/Maps/Tom_Backup
+MRUItem1=/Game/TetrisBP/Maps/Yosi
+MRUItem2=/Game/Yosi/Sky
+MRUItem3=/Game/TetrisBP/Maps/Romy
+MRUItem4=/Game/TetrisBP/Maps/FlyingExampleMap
+MRUItem5=/Game/FlyingBP/Maps/FlyingExampleMap
+MRUItem6=/Game/FlyingBP/Maps/MainMapRomy1
+MRUItem7=/Game/FlyingBP/Maps/Tom
+MRUItem8=/Game/Maps/RomyLevel1
+MRUItem9=/Game/Maps/Tom_Backup
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.NewRightLeft,InputSettings.Bindings.ActionMappings.RotatePlatform,InputSettings.Bindings.ActionMappings,
@@ -251,7 +253,8 @@ ContentBrowserTab2.CurrentViewType=1
 LastLevel=/Game/TetrisBP/Maps/TetrisLevel1_01
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Yosi/Earth/Worldmap.Worldmap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1062,28 +1065,122 @@ Spaceship_C.Actor=True
 FbxImportUI.Animation=True
 Space_Skybox_C.Tick=True
 StaticMesh.LevelOfDetail=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
+ARSkyLight.TransformCommon=True
+ARSkyLight.Light=True
+ARSkyLight.Rendering=True
+ARSkyLight.DistanceFieldAmbientOcclusion=True
+ARSkyLight.RayTracing=True
+ARSkyLight.SkyLight=True
+ARSkyLight.Tags=True
+ARSkyLight.Activation=True
+ARSkyLight.Cooking=True
+ARSkyLight.Actor=True
+BP_Sky_Sphere_C.Tick=True
+LightmassCharacterIndirectDetailVolume.TransformCommon=True
+LightmassCharacterIndirectDetailVolume.Lighting=True
+LightmassCharacterIndirectDetailVolume.Physics=True
+LightmassCharacterIndirectDetailVolume.BrushSettings=True
+LightmassCharacterIndirectDetailVolume.VirtualTexture=True
+LightmassCharacterIndirectDetailVolume.Tags=True
+LightmassCharacterIndirectDetailVolume.Activation=True
+LightmassCharacterIndirectDetailVolume.Cooking=True
+LightmassCharacterIndirectDetailVolume.Replication=True
+LightmassCharacterIndirectDetailVolume.Actor=True
+VolumetricLightmapDensityVolume.TransformCommon=True
+VolumetricLightmapDensityVolume.VolumetricLightmapDensityVolume=True
+VolumetricLightmapDensityVolume.Lighting=True
+VolumetricLightmapDensityVolume.BrushSettings=True
+VolumetricLightmapDensityVolume.Physics=True
+VolumetricLightmapDensityVolume.VirtualTexture=True
+VolumetricLightmapDensityVolume.Tags=True
+VolumetricLightmapDensityVolume.Activation=True
+VolumetricLightmapDensityVolume.Cooking=True
+VolumetricLightmapDensityVolume.Replication=True
+VolumetricLightmapDensityVolume.Actor=True
+TriggerVolume.TransformCommon=True
+TriggerVolume.Collision=True
+TriggerVolume.Lighting=True
+TriggerVolume.Physics=True
+TriggerVolume.VirtualTexture=True
+TriggerVolume.BrushSettings=True
+TriggerVolume.Tags=True
+TriggerVolume.Activation=True
+TriggerVolume.Cooking=True
+TriggerVolume.Replication=True
+TriggerVolume.Actor=True
+MaterialExpressionTextureSampleParameterCube.General=True
+MaterialExpressionTextureSampleParameterCube.MaterialExpression=True
+MaterialExpressionTextureSampleParameterCube.ParameterCustomization=True
+MaterialExpressionTextureSampleParameterCube.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameterCube.MaterialExpressionTextureBase=True
+MaterialExpressionReflectionVectorWS.UMaterialExpressionReflectionVectorWS=True
+MaterialExpressionReflectionVectorWS.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialParameterCollection.Material=True
+MaterialExpressionCollectionParameter.General=True
+MaterialExpressionCollectionParameter.MaterialExpression=True
+MaterialExpressionLightmassReplace.MaterialExpression=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionVertexInterpolator.MaterialExpression=True
+MaterialExpressionDotProduct.MaterialExpression=True
+MaterialExpressionPixelNormalWS.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+MaterialExpressionVertexNormalWS.MaterialExpression=True
+Sun_BP_C.Tick=True
+Sun_BP_C.Rendering=True
+Sun_BP_C.Replication=True
+Sun_BP_C.Collision=True
+Sun_BP_C.Input=True
+Sun_BP_C.Actor=True
+Sun_BP_C.TransformCommon=True
+MaterialExpressionPower.MaterialExpressionPower=True
+MaterialExpressionPower.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Yosi/Spaceship/Sky_1
-MRUItem1=/Game/Yosi/SkyBox
-MRUItem2=/Game/Yosi/Spaceship/NewMaterial
-MRUItem3=/Game/Yosi/Spaceship/NewMaterial_Inst
-MRUItem4=/Game/Yosi/Space_Skybox
-MRUItem5=/Game/Yosi/SkySphere
-MRUItem6=/Game/Yosi/Test_Spacesheep_2
-MRUItem7=/Game/TetrisBP/Maps/TetrisLevel1_01
-MRUItem8=/Game/Yosi/Sky
-MRUItem9=/Game/Yosi/SP_11
-MRUItem10=/Game/Yosi/33
-MRUItem11=/Game/Yosi/Test_Spacesheep_cushion_usemtl_1
-MRUItem12=/Game/Yosi/Test_Spacesheep_green__1
-MRUItem13=/Game/TetrisBP/Maps/Romy
-MRUItem14=/Game/TetrisBP/Maps/FlyingExampleMap
-MRUItem15=/Game/TetrisBP/Blueprints/Player/Spaceship
-MRUItem16=/Game/TetrisBP/Blueprints/Player/SpaceshipController
-MRUItem17=/Game/Assets/Spaceships/UFO
-MRUItem18=/Game/TetrisBP/Blueprints/Player/PlayerController
-MRUItem19=/Game/TetrisBP/Blueprints/Player/FlyingPawn
+MRUItem0=/Game/Yosi/Earth/SkySphere
+MRUItem1=/Game/Yosi/Earth/Plante
+MRUItem2=/Game/Yosi/Earth/Sun_BP
+MRUItem3=/Game/Yosi/Earth/Planetcollection
+MRUItem4=/Game/Yosi/Earth/NewMaterialInstanceConstant
+MRUItem5=/Game/TetrisBP/Maps/TetrisLevel1_01
+MRUItem6=/Game/TetrisBP/Maps/Yosi
+MRUItem7=/Game/Yosi/Earth/Test_Spacesheep_2
+MRUItem8=/Game/Yosi/Earth/Worldmap
+MRUItem9=/Game/Yosi/Test_Spacesheep_2
+MRUItem10=/Game/Yosi/Earth/Clouds2
+MRUItem11=/Game/Yosi/maxresdefault_Mat_1
+MRUItem12=/Game/Yosi/maxresdefault
+MRUItem13=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem14=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem15=/Game/Yosi/SkySphere
+MRUItem16=/Game/Yosi/Spaceship/NewMaterial_Inst
+MRUItem17=/Game/Yosi/Spaceship/Sky_1
+MRUItem18=/Game/Yosi/SkyBox
+MRUItem19=/Game/Yosi/Spaceship/NewMaterial
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[44]\" "
@@ -1093,7 +1190,7 @@ PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Ve
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 ActorComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Cube_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1104,10 +1201,14 @@ StaticMeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 RotatingMovementComponent="\"Object.RotatingComponent.RotationRate\" \"Object.Velocity.Velocity\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ShapeTracing_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Cube2_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+LightmassCharacterIndirectDetailVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+VolumetricLightmapDensityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+MaterialParameterCollection="\"Object.Material.VectorParameters\" \"Object.Material.VectorParameters.VectorParameters[0]\" "
 
 [RootWindow]
 ScreenPosition=X=-1672.000 Y=139.000
@@ -1911,26 +2012,26 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Yosi/Spaceship/Sky_1.Sky_1;
+RecentlyPlaced=/Game/Yosi/Earth/Sun_BP.Sun_BP;
+RecentlyPlaced=/Game/Yosi/Earth/Worldmap.Worldmap;
+RecentlyPlaced=/Game/Yosi/Earth/Sphere_2.Sphere_2;
+RecentlyPlaced=/Game/Yosi/Earth/Test_Spacesheep_2.Test_Spacesheep_2;
+RecentlyPlaced=/Game/Yosi/Earth/Plante.Plante;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Yosi/Earth/SkySphere.SkySphere;
+RecentlyPlaced=/Script/Engine.VolumetricLightmapDensityVolume;/Engine/Transient.ActorFactoryBoxVolume_21
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.LightmassCharacterIndirectDetailVolume;/Engine/Transient.ActorFactoryBoxVolume_13
+RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
+RecentlyPlaced=/Script/AugmentedReality.ARSkyLight;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Yosi/Spaceship/Sky_1.Sky_1;
 RecentlyPlaced=/Game/Yosi/Spaceship/NewMaterial_Inst.NewMaterial_Inst;
 RecentlyPlaced=/Game/Yosi/Spaceship/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/Yosi/Test_Spacesheep_2.Test_Spacesheep_2;
-RecentlyPlaced=/Game/Yosi/Spaceship/material_1_red.material_1_red;
-RecentlyPlaced=/Game/Yosi/Spaceship/d17b.d17b;
-RecentlyPlaced=/Game/Yosi/Spaceship/material_1_cushion.material_1_cushion;
-RecentlyPlaced=/Game/Yosi/Spaceship/material_1_couplers.material_1_couplers;
-RecentlyPlaced=/Game/Yosi/SP_11.SP_11;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Yosi/SkySphere.SkySphere;
-RecentlyPlaced=/Game/Yosi/Space_Skybox.Space_Skybox;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
-RecentlyPlaced=/Game/Materials/projection_Mat.projection_Mat;
-RecentlyPlaced=/Game/Geometry/Meshes/Blocks_T.Blocks_T;
 
 [DetailCategoriesAdvanced]
 FlyingPawn_C.Collision=True
@@ -1965,7 +2066,7 @@ Cube2_Blueprint_C.Collision=True
 /Game/Materials/Textures/AlbedoB_W01.AlbedoB_W01=1
 /Game/Assets/Spaceships/Spaceships_1_Cube_010.Spaceships_1_Cube_010=1
 /Game/UI.UI=1
-/Game/Yosi/SkySphere.SkySphere=1
+/Game/Yosi/SkySphere.SkySphere=0
 /Game/TetrisBP/Blueprints/Player/FlyingPawn.FlyingPawn=1
 /Game/Yosi/dreamstime_xxl_113421855__1_.dreamstime_xxl_113421855__1_=1
 /Game/TetrisBP/Blueprints/Player/PlayerController.PlayerController=1
@@ -1976,9 +2077,20 @@ Cube2_Blueprint_C.Collision=True
 /Game/Yosi/Test_Spacesheep_cushion_usemtl_1.Test_Spacesheep_cushion_usemtl_1=1
 /Game/Yosi/33.33=1
 /Game/Yosi/SP_11.SP_11=1
-/Game/Yosi/Test_Spacesheep_2.Test_Spacesheep_2=1
+/Game/Yosi/Test_Spacesheep_2.Test_Spacesheep_2=0
 /Game/Yosi/Space_Skybox.Space_Skybox=1
 /Game/Yosi/Spaceship/NewMaterial.NewMaterial=1
+/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=0
+/Game/Yosi/maxresdefault.maxresdefault=0
+/Game/Yosi/maxresdefault_Mat_1.maxresdefault_Mat_1=0
+/Game/Yosi/Earth/SkySphere.SkySphere=0
+/Game/Yosi/Earth/Planetcollection.Planetcollection=0
+/Game/Yosi/Earth/Plante.Plante=0
+/Game/Yosi/Spaceship/NewMaterial_Inst.NewMaterial_Inst=0
+/Engine/EngineSky/M_Sky_Panning_Clouds2.M_Sky_Panning_Clouds2=0
+/Game/Yosi/Earth/Clouds2.Clouds2=0
+/Game/Yosi/Earth/Test_Spacesheep_2.Test_Spacesheep_2=0
+/Game/Yosi/Earth/Sun_BP.Sun_BP=0
 
 [MessageLog]
 LastLogListing=LoadErrors
