--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1161,26 +1161,26 @@ MaterialExpressionPower.MaterialExpressionPower=True
 MaterialExpressionPower.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Yosi/Earth/SkySphere
-MRUItem1=/Game/Yosi/Earth/Plante
-MRUItem2=/Game/Yosi/Earth/Sun_BP
-MRUItem3=/Game/Yosi/Earth/Planetcollection
-MRUItem4=/Game/Yosi/Earth/NewMaterialInstanceConstant
-MRUItem5=/Game/TetrisBP/Maps/TetrisLevel1_01
-MRUItem6=/Game/TetrisBP/Maps/Yosi
-MRUItem7=/Game/Yosi/Earth/Test_Spacesheep_2
-MRUItem8=/Game/Yosi/Earth/Worldmap
-MRUItem9=/Game/Yosi/Test_Spacesheep_2
-MRUItem10=/Game/Yosi/Earth/Clouds2
-MRUItem11=/Game/Yosi/maxresdefault_Mat_1
-MRUItem12=/Game/Yosi/maxresdefault
-MRUItem13=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem14=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem15=/Game/Yosi/SkySphere
-MRUItem16=/Game/Yosi/Spaceship/NewMaterial_Inst
-MRUItem17=/Game/Yosi/Spaceship/Sky_1
-MRUItem18=/Game/Yosi/SkyBox
-MRUItem19=/Game/Yosi/Spaceship/NewMaterial
+MRUItem0=/Game/TetrisBP/Blueprints/Player/SpaceshipController
+MRUItem1=/Game/TetrisBP/Blueprints/Player/Spaceship
+MRUItem2=/Game/Yosi/Earth/SkySphere
+MRUItem3=/Game/Yosi/Earth/Plante
+MRUItem4=/Game/Yosi/Earth/Sun_BP
+MRUItem5=/Game/Yosi/Earth/Planetcollection
+MRUItem6=/Game/Yosi/Earth/NewMaterialInstanceConstant
+MRUItem7=/Game/TetrisBP/Maps/TetrisLevel1_01
+MRUItem8=/Game/TetrisBP/Maps/Yosi
+MRUItem9=/Game/Yosi/Earth/Test_Spacesheep_2
+MRUItem10=/Game/Yosi/Earth/Worldmap
+MRUItem11=/Game/Yosi/Test_Spacesheep_2
+MRUItem12=/Game/Yosi/Earth/Clouds2
+MRUItem13=/Game/Yosi/maxresdefault_Mat_1
+MRUItem14=/Game/Yosi/maxresdefault
+MRUItem15=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem16=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem17=/Game/Yosi/SkySphere
+MRUItem18=/Game/Yosi/Spaceship/NewMaterial_Inst
+MRUItem19=/Game/Yosi/Spaceship/Sky_1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[44]\" "
@@ -2332,5 +2332,19 @@ PrimType=1
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
 
