--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -264,6 +264,7 @@ LastLevel=/Game/TetrisBP/Maps/TetrisLevel1_01
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Yosi/Solar_System/BP_Planet.BP_Planet
 OpenAssetsAtExit=/Game/TetrisBP/Blueprints/Player/Spaceship.Spaceship
+OpenAssetsAtExit=/HDRIBackdrop/Textures/approaching_storm_4k.approaching_storm_4k
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -953,7 +954,7 @@ WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.Tick=True
 HDRIBackdrop_C.TransformCommon=True
-HDRIBackdrop_C.HDRI Backdrop=False
+HDRIBackdrop_C.HDRI Backdrop=True
 HDRIBackdrop_C.Rendering=True
 HDRIBackdrop_C.Replication=True
 HDRIBackdrop_C.Collision=True
@@ -1175,9 +1176,9 @@ TextureCube.Adjustments=True
 TextureCube.LevelOfDetail=True
 TextureCube.Compositing=True
 Space_Skybox_BP_C.Tick=True
-Space_Skybox_BP_C.Rendering=False
-Space_Skybox_BP_C.Replication=False
-Space_Skybox_BP_C.Collision=False
+Space_Skybox_BP_C.Rendering=True
+Space_Skybox_BP_C.Replication=True
+Space_Skybox_BP_C.Collision=True
 Space_Skybox_BP_C.Input=False
 Space_Skybox_BP_C.Actor=False
 Space_Skybox_BP_C.TransformCommon=True
@@ -1276,28 +1277,58 @@ BP_Planet_C.Input=True
 BP_Planet_C.Actor=True
 BP_Planet_C.TransformCommon=True
 BP_Planet_C.Default=True
+BP_Planet_C.LOD=True
+HDRIBackdrop_C.Tick=True
+MaterialExpressionReroute.MaterialExpression=True
+SkyLightComponent.Variable=True
+SkyLightComponent.TransformCommon=True
+SkyLightComponent.Sockets=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.RayTracing=True
+SkyLightComponent.Rendering=True
+SkyLightComponent.Tags=True
+SkyLightComponent.ComponentReplication=True
+SkyLightComponent.Cooking=True
+SkyLightComponent.Events=True
+SpotLightComponent.Variable=True
+SpotLightComponent.TransformCommon=True
+SpotLightComponent.Sockets=True
+SpotLightComponent.Light=True
+SpotLightComponent.Rendering=True
+SpotLightComponent.Lightmass=True
+SpotLightComponent.Performance=True
+SpotLightComponent.LightFunction=True
+SpotLightComponent.Light Profiles=True
+SpotLightComponent.DistanceFieldShadows=True
+SpotLightComponent.RayTracing=True
+SpotLightComponent.Tags=True
+SpotLightComponent.ComponentReplication=True
+SpotLightComponent.Cooking=True
+SpotLightComponent.Events=True
+MaterialExpressionVertexColor.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TetrisBP/Blueprints/Player/Spaceship
-MRUItem1=/Game/Yosi/Solar_System/BP_Planet
-MRUItem2=/Game/TetrisBP/Maps/TetrisLevel1_01
-MRUItem3=/Game/Yosi/Earth/2k_earth_daymap
-MRUItem4=/Game/Yosi/Sky_Box/SkyBox_7
-MRUItem5=/Game/Yosi/Sky_Box/SkyBox_2
-MRUItem6=/Game/Yosi/Sky_Box/SkyBox_6
-MRUItem7=/Game/Yosi/Sky_Box/SpaceMap
-MRUItem8=/Game/Yosi/Sky_Box/SkyBox_5
-MRUItem9=/Game/TetrisBP/Blueprints/Player/Spaceship3Romy
-MRUItem10=/Game/TetrisBP/Maps/Yosi
-MRUItem11=/Game/Yosi/Earth/Planet_M_Inst
-MRUItem12=/Game/Yosi/Earth/Worldmap
-MRUItem13=/Game/Yosi/Earth/Sun_BP
-MRUItem14=/Game/Yosi/Earth/Test_Spacesheep_2
-MRUItem15=/Game/Yosi/Earth/Planetcollection
-MRUItem16=/Game/Yosi/Earth/Globe
-MRUItem17=/Game/Yosi/Earth/Earth_Mesh
-MRUItem18=/Game/Yosi/Earth/Plante
-MRUItem19=/Game/Yosi/Earth/Sphere_2
+MRUItem0=/Engine/VREditor/BasicMeshes/SM_Cube_01
+MRUItem1=/Engine/VREditor/BasicMeshes/M_Floor_01
+MRUItem2=/Engine/VREditor/LaserPointer/M_LaserPointer-Core
+MRUItem3=/Game/Assets/Geometry/Meshes/Platform
+MRUItem4=/HDRIBackdrop/Textures/approaching_storm_4k
+MRUItem5=/Game/TetrisBP/Blueprints/Player/Spaceship
+MRUItem6=/Game/Yosi/Solar_System/BP_Planet
+MRUItem7=/Game/TetrisBP/Maps/TetrisLevel1_01
+MRUItem8=/Game/Yosi/SkyBox_1
+MRUItem9=/HDRIBackdrop/Blueprints/HDRIBackdrop
+MRUItem10=/Game/Yosi/Sky_Box/SpaceMap
+MRUItem11=/Game/Yosi/Earth/2k_earth_daymap
+MRUItem12=/Game/Yosi/Sky_Box/SkyBox_7
+MRUItem13=/Game/Yosi/Sky_Box/SkyBox_2
+MRUItem14=/Game/Yosi/Sky_Box/SkyBox_6
+MRUItem15=/Game/Yosi/Sky_Box/SkyBox_5
+MRUItem16=/Game/TetrisBP/Blueprints/Player/Spaceship3Romy
+MRUItem17=/Game/TetrisBP/Maps/Yosi
+MRUItem18=/Game/Yosi/Earth/Planet_M_Inst
+MRUItem19=/Game/Yosi/Earth/Worldmap
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[44]\" "
@@ -1330,7 +1361,7 @@ AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightC
 Info=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpression=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 
 [RootWindow]
@@ -2135,13 +2166,18 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 
 [PlacementMode]
-RecentlyPlaced=/HDRIBackdrop/Blueprints/HDRIBackdrop.HDRIBackdrop;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/Yosi/Solar_System/BP_Planet.BP_Planet;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Engine/VREditor/BasicMeshes/SM_Cube_02.SM_Cube_02;
+RecentlyPlaced=/Engine/VREditor/BasicMeshes/SM_Cube_01.SM_Cube_01;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Script/AugmentedReality.ARSkyLight;
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
+RecentlyPlaced=/HDRIBackdrop/Blueprints/HDRIBackdrop.HDRIBackdrop;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Game/Yosi/SkySphere.SkySphere;
+RecentlyPlaced=/Game/Yosi/Solar_System/BP_Planet.BP_Planet;
 RecentlyPlaced=/Game/Yosi/Earth/Worldmap.Worldmap;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Yosi/Earth/Test_Spacesheep_2.Test_Spacesheep_2;
@@ -2150,11 +2186,6 @@ RecentlyPlaced=/Game/Yosi/Earth/SkySphere.SkySphere;
 RecentlyPlaced=/Game/Yosi/Earth/Earth_Mesh.Earth_Mesh;
 RecentlyPlaced=/Game/Yosi/Sky_Box/Space_Skybox_BP.Space_Skybox_BP;
 RecentlyPlaced=/Game/Yosi/Earth/Globe.Globe;
-RecentlyPlaced=/Game/Yosi/Earth/Plante.Plante;
-RecentlyPlaced=/Script/Engine.VolumetricLightmapDensityVolume;/Engine/Transient.ActorFactoryBoxVolume_21
-RecentlyPlaced=/Script/Engine.LightmassCharacterIndirectDetailVolume;/Engine/Transient.ActorFactoryBoxVolume_13
-RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
-RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 
 [DetailCategoriesAdvanced]
 FlyingPawn_C.Collision=True
@@ -2170,6 +2201,7 @@ Cube2_Blueprint_C.VirtualTexture=True
 Cube2_Blueprint_C.Rendering=True
 Cube2_Blueprint_C.Lighting=True
 Cube2_Blueprint_C.Collision=True
+HDRIBackdrop_C.HDRI Backdrop=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Cube.Cube=1
@@ -2232,6 +2264,10 @@ Cube2_Blueprint_C.Collision=True
 /Game/Yosi/Sky_Box/SkyBox_5.SkyBox_5=1
 /Game/Yosi/Sky_Box/SkyBox_6.SkyBox_6=1
 /Game/Yosi/Sky_Box/SkyBox_7.SkyBox_7=1
+/Engine/VREditor/LaserPointer/M_LaserPointer-Core.M_LaserPointer-Core=0
+/Engine/VREditor/BasicMeshes/SM_Cube_01.SM_Cube_01=0
+/Engine/VREditor/BasicMeshes/M_Floor_01.M_Floor_01=0
+/Game/Assets/Geometry/Meshes/Platform.Platform=0
 
 [MessageLog]
 LastLogListing=LoadErrors
